--- a/requirements.txt
+++ b/requirements.txt
@@ -81,8 +81,11 @@ jupyterlab_widgets==3.0.13
 keras==3.5.0
 kiwisolver==1.4.7
 langchain==0.3.1
+langchain_openai
+langchain_community
 langchain-core==0.3.7
 langchain-text-splitters==0.3.0
+langgraph
 langsmith==0.1.129
 libclang==18.1.1
 Markdown==3.7
@@ -181,6 +184,20 @@ types-python-dateutil==2.9.0.20240906
 types-requests==2.32.0.20240914
 typing_extensions==4.12.2
 tzdata==2024.2
+ollama
+gradio
+pdfplumber 
+langchain
+langchain-core
+langchain-ollama
+langchain_community
+langchain_text_splitters
+unstructured
+unstructured[all-docs]
+onnx==1.17.0
+chromadb==0.4.22
+Pillow
+numpy
 uri-template==1.3.0
 urllib3==2.2.3
 wcwidth==0.2.13
